# ChiefOnboarding

./: AGENT.md  AGENTS.md  IMPLEMENTATION_PLAN.md  Procfile  README.md  crush.json  makefile  mcp.py  pyproject.toml
.devcontainer/: .env.example  Dockerfile-dev  README.md  devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: tests.yml
.ona/: automations.yaml  mcp-config.json
back/: .env.example  .gitignore  Dockerfile  Dockerfile-dev
back/back/: settings.py  urls.py
back/locale/de/LC_MESSAGES/: django.po
back/new_hire/templates/: new_hire_base.html
back/organization/: forms.py  middleware.py
back/organization/management/commands/: setup_dev_environment.py
back/organization/templates/: initial_setup.html
back/slack_bot/: views.py
back/static/css/: pastel-theme.css
back/users/templates/: admin_base.html  no_login_base.html
mcp_tools/: TESTS.md  __init__.py  base.py
