[project]
name = "chiefonboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.0",
    "croniter>=6.0.0",
    "cryptography>=45.0.5",
    "django-allauth[mfa,socialaccount]>=65.0.0",
    "django-anymail>=13.0.1",
    "django-axes[ipware]>=8.0.0",
    "django-crispy-forms>=2.4",
    "django-environ>=0.12.0",
    "django-q-sentry==0.1.6",
    "django-q2>=1.8.0",
    "django<6",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "pyotp>=2.9.0",
    "requests>=1.23.0",
    "sentry-sdk>=2.34.1",
    "slack-bolt",
    "sparkpost>=1.3.10",
    "twilio>=9.7.0",
    "whitenoise>=6.9.0",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.10.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.8.1",
    "ruff>=0.12.7",
    "django-debug-toolbar>=6.0.0",
    "freezegun<=1.5.4",
]
